<resources>
    <string name="app_name">RE Investment Simulator</string>
    <string name="title_activity_property">PropertyActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="re_investment_simulator">RE Investment Simulator</string>
    <string name="details">Details</string>
    <string name="lender">Lender</string>
    <string name="property">Property</string>
    <string name="rooms">Rooms</string>
    <string name="bottom_copyright_string">© 2017 Application developed by Serious Monkey</string>
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
