<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.seriousmonkey.realestateinvestmentsimulator.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:background="@color/colorMainBackground"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/MainToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTabBackground"
                android:elevation="1dp"
                android:theme="?attr/actionBarTheme"
                app:title="@string/re_investment_simulator"
                app:titleTextColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/tabSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <android.support.design.widget.TabLayout
                    android:id="@+id/mainTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabIndicatorColor="@color/colorPrimaryDark"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <android.support.design.widget.TabItem
                        android:id="@+id/propertyTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTabBackground"
                        android:clickable="false"
                        android:onClick="showPropertyActivity"
                        android:text="@string/property"
                        android:textColor="@color/tab_text" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/lenderTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lender" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/roomsTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rooms" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/detailsTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details" />
                </android.support.design.widget.TabLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/formSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="84dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-30dp"
            android:background="@color/colorMainBackground"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/messageSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="0dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/bottom_copyright_string"
                    android:textColor="@android:color/background_light"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />


</android.support.v4.widget.DrawerLayout>